--- a/views/subscription/membership.html
+++ b/views/subscription/membership.html
@@ -2,98 +2,30 @@
 
 {% block content %}
   <div class="mt-3">
-    {% if user.isVip %}
-      <div class="d-flex justify-content-between mb-3 pb-3 border-bottom">
-        <span>会员类型</span>
-        <span>VIP</span>
-      </div>
+    <div class="d-flex justify-content-between mb-3 pb-3 border-bottom">
+      <span>会员类型</span>
+      <span>{{data.tier}}</span>
+    </div>
 
-      <div class="d-flex justify-content-between mb-3 pb-3 border-bottom">
-        <span>会员期限</span>
-        <span>无限期</span>
-      </div>
+    <div class="d-flex justify-content-between mb-3 pb-3 border-bottom">
+      <span>会员期限</span>
+      <span>{{data.expiration}}</span>
+    </div>
 
-    {% elif user.isMember() %}
-
-      <div class="d-flex justify-content-between mb-3 pb-3 border-bottom">
-        <span>会员类型</span>
-        <span>{{ user.member.tier | localize }}</span>
-      </div>
-
-      <div class="d-flex justify-content-between mb-3 pb-3 border-bottom">
-        <span>会员期限</span>
-        <span>{{ user.member.expireDate }}</span>
-      </div>
-
-      <div class="mb-3 text-right">
-        {% if user.member.remainingDays() < 0 %}
-          <span class="text-danger">会员已经过期，请续订</span>
-        {% elif (user.member.remainingDays() > 0 and user.member.remainingDays() <= 7) %}
-          <span class="text-danger">会员即将过期，剩余{{ user.member.remainingDays() }}天，请续订</span>
-        {% endif %}
-        <a href="{{ sitemap.renewal }}" class="btn btn-primary">续订</a>
-      </div>
-      
-      <div class="text-right">
-        <a href="{{ sitemap.subs }}/orders">订单历史</a>
-      </div>
-    {% else %}
-      <div class="d-flex justify-content-between">
-        <h2>订阅FT中文网会员</h2>
-        {# <a class="btn btn-link" href="{{ sitemap.redeem }}">有礼品卡？</a>#}
-      </div>
-      
-      <div class="container">
-        <div class="row">
-          <div class="col-12 pt-3 pb-3">
-              <h4 class="text-center">请选择您的订阅方式</h4>
-          </div>
-        </div>
-        
-        <div class="row justify-content-around o-card-group">
-          {% for product in products %}
-            <div class="col-lg-6 mb-3">
-                <div class="card">
-                    <div class="card-body">
-                      <h3 class="card-title text-center mb-3 pb-3">{{product.heading}}</h3>
-                      <ul>
-                        {% for item in product.benefits %}
-                          <li>{{ item }}</li>
-                        {% endfor %}
-                      </ul>
-                      {% if product.smallPrint %}
-                        <small>{{product.smallPrint}}</small>
-                      {% endif %}
-                    </div>
-    
-                    <div class="card-footer">
-                        {% for plan in product.pricing %}
-                        <div class="text-center mb-2">
-                            <a {% if plan.cycle=="month" %}
-                              class="btn btn-outline-primary" 
-                            {% else %} 
-                              class="btn btn-primary text-white"
-                            {% endif %}
-                              href="{{sitemap.payment(plan.tier, plan.cycle)}}">
-                                {% if plan.listPrice != plan.netPrice %}
-                                <s>{{product.currency | localize}}{{ plan.listPrice | toCurrency }}/{{ plan.cycle |
-                                    localize }}</s>
-                                {% endif %}
-                                {{product.currency | localize}}{{ plan.listPrice | toCurrency }}/{{ plan.cycle | localize
-                                }}
-                            </a>
-                        </div>
-                        {% endfor %}
-                    </div>
-                </div>
-            </div>
-          {% endfor %}
-        </div>
-      </div>
-
+    {% if data.renew %}
+    <div class="mb-3 text-right">
+      <span class="text-danger">{{data.renew.remaining}}</span>
+      <a href="{{ data.renew.link }}" class="btn btn-primary">续订</a>
+    </div>
     {% endif %}
 
-    <p class="pt-5">如果订阅时遇到问题，可以致函 <a href="{{ mailTo }}">FT客服邮箱</a></p>
+    {% if data.ordersLink %}
+    <div class="text-right">
+      <a href="{{ data.ordersLink }}">订单历史</a>
+    </div>
+    {% endif %}
+
+    {% include "partials/customer-service.html" %}
   </div>
 
 {% endblock %}
